Initial figwheel setup